--- a/config.toml
+++ b/config.toml
@@ -13,5 +13,5 @@ ChainID = '11155111'
 
 [[EVM.Nodes]]
 Name = 'Sepolia'
-WSURL ='wss://sepolia.infura.io/ws/v3/4fbab3ddac1c44b596649e21a0756c02'
-HTTPURL ='https://sepolia.infura.io/v3/4fbab3ddac1c44b596649e21a0756c02'
+WSURL =''
+HTTPURL =''
